# enterprise-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: approval_gate.py  classify.py  error_handler.py  planner.py  rag_lookup.py  tool_executor.py  validator.py
app/api/: deps.py  middleware.py
app/api/routes/: agent.py  approvals.py  audit.py  auth.py  documents.py  health.py
app/core/: config.py  ids.py  logging.py
app/db/: base.py  init_db.py  session.py
app/db/models/: agent_run.py  approval.py  audit_log.py  user.py
app/services/: approval.py  audit.py  embeddings.py  retriever.py  tracing.py  vector_store.py
app/tools/: base.py  calendar.py  crm.py  email.py  knowledge_base.py  registry.py  sanitizer.py  ticketing.py
tests/: conftest.py  test_agent.py  test_api.py  test_tools.py
