[project]
name = "enterprise-agent-orchestrator"
version = "0.1.0"
description = "LangGraph-powered agent for enterprise business request processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.0",
    "qdrant-client>=1.8.0",
    "langfuse>=2.0.0",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120